# DCG-Crypto

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: blockidcoind.bash-completion  dailycrypto-cli.bash-completion  dailycrypto-qt.pro  dailycrypto-tx.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/debian/: README.md  blockidcoind.bash-completion  blockidcoind.examples  blockidcoind.install  blockidcoind.lintian-overrides  blockidcoind.manpages  blockidcoind.postinst  blockidcoind.postrm  blockidcoind.service  changelog  control  dailycrypto-qt.desktop  dailycrypto-qt.install  dailycrypto-qt.lintian-overrides  dailycrypto-qt.manpages  dailycrypto-qt.protocol  rules  watch
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
scripts/: README.md  build-arm32.sh  build-arm64.sh  build-mac.sh  build-maintar.sh  build-testtar.sh  build-win32.sh  build-win64.sh  buildlinux.sh  buildwindows32.sh  buildwindows64.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  bip39.h  bip39_english.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  collateral.cpp  collateral.h  (+121 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  dailycrypto.cpp  dailycrypto.qrc  dailycrypto_locale.qrc  dailycryptostrings.cpp  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  (+40 more)
src/qt/dailycrypto/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coincontrolpivwidget.cpp  coincontrolpivwidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dailycryptogui.cpp  dailycryptogui.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  (+59 more)
src/qt/dailycrypto/forms/: addresseswidget.ui  coincontrolpivwidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendconfirmdialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/dailycrypto/res/css/: style_dark.css  style_light.css
src/qt/dailycrypto/res/img/: bg-splash.xcf  bg-welcome-container.xcf  img-logo-dailycrypto@3x.xcf
src/qt/dailycrypto/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/dailycrypto/settings/forms/: settingsfaqwidget.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui  zpivcontroldialog.ui
src/qt/locale/: dailycrypto_bg.ts  dailycrypto_ca.ts  dailycrypto_cs.ts  dailycrypto_da.ts  dailycrypto_de.ts  dailycrypto_en.ts  dailycrypto_en_GB.ts  dailycrypto_en_US.ts  dailycrypto_eo.ts  dailycrypto_es.ts  dailycrypto_es_ES.ts  dailycrypto_fi.ts  dailycrypto_fr_FR.ts  dailycrypto_hi_IN.ts  dailycrypto_hr.ts  dailycrypto_hr_HR.ts  dailycrypto_it.ts  dailycrypto_ja.ts  dailycrypto_ko_KR.ts  dailycrypto_lt_LT.ts  dailycrypto_nl.ts  dailycrypto_pl.ts  dailycrypto_pt.ts  dailycrypto_pt_BR.ts  dailycrypto_ro_RO.ts  dailycrypto_ru.ts  dailycrypto_sk.ts  dailycrypto_sv.ts  dailycrypto_tr.ts  dailycrypto_uk.ts  dailycrypto_vi.ts  dailycrypto_zh_CN.ts  dailycrypto_zh_TW.ts
src/qt/res/: dailycrypto-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns  dailycrypto.xcf
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
(+325 files in other folders)
